--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4"
   },
+  "engines" : { "node" : "9.6.1" },
+
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
